style/styles.css
* {
    margin: 0;
    padding: 0;
}

@font-face {
    font-family: Rubik;
    src: url(../assets/static/Rubik-Regular.ttf);
}

body {
    background-color: #0E1323;
    font-family: Rubik;
}

.grid-display {
    display: grid;
    grid-template-columns: auto auto auto auto;
    grid-template-rows: auto auto;
    margin: 10rem 8rem 0 8rem;
}

.div-item:nth-child(1) {
    grid-row: 1 / span 2;
}

.div-item:nth-child(2) {
    grid-row: 1;
    grid-column: 2;
}

.div-item:nth-child(3) {
    grid-row: 2;
}

.div-item:nth-child(4) {
    grid-row: 1;
    grid-column: 3;
}

.div-item:nth-child(5) {
    grid-row: 2;
}

.div-item:nth-child(6) {
    grid-row: 1;
    grid-column: 4;
}

.div-item:nth-child(7) {
    grid-row: 2;
}

.personal {
    height: 518px;
    width: 255px;
    background-color: #1C204B;
    border-radius: 5%;
}

.personal p {
    color: #7078C9;
    font-size: 18px;
    font-weight: normal;
    padding: 1rem 0 0 2rem;
}

.personal-hero {
    height: 354px;
    width: 255px;
    background-color: #5747EA;
    border-radius: 5%;
}

.mobile-bottom-flex {
    padding-top: 1rem;
}

.mobile-bottom-flex p:hover, 
.mobile-bottom-flex p:active, 
.mobile-bottom-flex p:focus {
    color: white;
    cursor: pointer;
}

.personal-hero p {
    font-weight: normal;
    font-size: 15px;
    color: #BBC0FF;
    padding-left: 2rem;
}

.personal-hero h2 {
    font-size: 40px;
    font-weight: lighter;
    color: white;
    padding-left: 2rem;
}

.jeremy {
    width: 78px;
    height: 78px;
    border: 4px solid white;
    border-radius: 50%;
    margin: 2rem;
}

.work {
    height: 244px;
    width: 255px;
    background-color: #FF8B64;
    position: relative;
    border-radius: 5%;
    display: flex;
    justify-content: flex-end;
}

.work-hero {
    margin-top: 3rem;
    height: 199px;
    width: 255px;
    background-color: #1C204B;
    border-radius: 5%;
    position: absolute;
}

.work-hero:hover {
    background-color: #33397A;
    cursor: pointer;
}

.worksvg {
    position: absolute;
    top: -4%;
}

.playsvg {
    position: absolute;
    top: -4%;
}

.studysvg {
    position: absolute;
    top: -4%;
}

.socialsvg {
    position: absolute;
    top: -4%;
}

.selfcaresvg {
    position: absolute;
    top: -4%;
}

.overflow {
    overflow: hidden;
}

.content {
    display: flex; 
    justify-content: space-between; 
    padding: 2rem 2rem 1rem 2rem;
}

.changing-content {
    padding-left: 2rem;
}

.changing-content h1 {
    font-size: 56px;
    font-weight: lighter;
    color: white;
}

.changing-content p {
    font-size: 15px;
    color: #BBC0FF;
    margin-bottom: 1rem;
}

h3 {
    color: white;
    font-weight: medium;
}

.content svg {
    margin-top: 10px;
    color: #BBC0FF;
}

.exercise {
    height: 244px;
    width: 255px;
    border-radius: 5%;
    background-color: #4BCF82;
    margin-top: 2rem;
    display: flex;
    justify-content: end;
}

.exercise-hero {
    margin-top: 3rem;
    height: 199px;
    width: 255px;
    background-color: #1C204B;
    border-radius: 5%;
    position: absolute;
}

.exercise-hero:hover {
    background-color: #33397A;
    cursor: pointer;
}

.play {
    height: 244px;
    width: 255px;
    position: relative;
    border-radius: 5%;
    background-color: #55C2E6;
    display: flex;
    justify-content: end;
}

.play-hero {
    margin-top: 3rem;
    height: 199px;
    width: 255px;
    background-color: #1C204B;
    border-radius: 5%;
    position: absolute;
}

.play-hero:hover {
    background-color: #33397A;
    cursor: pointer;
}

.social {
    height: 244px;
    width: 255px;
    border-radius: 5%;
    position: relative;
    background-color: #7335D2;
    margin-top: 2rem;
    display: flex;
    justify-content: end;
}

.social-hero {
    margin-top: 3rem;
    height: 199px;
    width: 255px;
    background-color: #1C204B;
    border-radius: 5%;
    position: absolute;
}

.social-hero:hover {
    background-color: #33397A;
    cursor: pointer;
}

.study {
    height: 244px;
    width: 255px;
    border-radius: 5%;
    position: relative;
    background-color: #FF5E7D;
    display: flex;
    justify-content: end;
}

.study-hero {
    margin-top: 3rem;
    height: 199px;
    width: 255px;
    background-color: #1C204B;
    border-radius: 5%;
    position: absolute;
}

.study-hero:hover {
    background-color: #33397A;
    cursor: pointer;
}

.self-care {
    height: 244px;
    width: 255px;
    border-radius: 5%;
    position: relative;
    background-color: #F1C75B;
    margin-top: 2rem;
    display: flex;
    justify-content: end;
}

.self-care-hero {
    margin-top: 3rem;
    height: 199px;
    width: 255px;
    background-color: #1C204B;
    border-radius: 5%;
    position: absolute;
}

.self-care-hero:hover {
    background-color: #33397A;
    cursor: pointer;
}

.ellipses {
    fill: #BBC0FF;
}

.ellipses:hover {
    fill: white;
    cursor: pointer;
}
/* ... */

